# nestdaq

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
cmake/: Boost.cmake  CMakeLists.txt  FairLogger.cmake  FairMQ.cmake  GitHelper.cmake  ZeorMQ.cmake  ZeroMQ.cmake  common.cmake  hiredis.cmake  opentelemetry-cpp.cmake  patch_redisjson.cmake  redis-stack.cmake  redis_plus_plus.cmake
controller/: CMakeLists.txt
examples/: CMakeLists.txt
nestdaq/: CMakeLists.txt  version.h.in
nestdaq/telemetry/: FairLoggerOpenTelemetrySink.cxx  FairLoggerOpenTelemetrySink.h  OpenTelemetryInitializer.cxx  OpenTelemetryInitializer.h
share/: CMakeLists.txt
share/controller/: CMakeLists.txt
share/new-device/: CMakeLists.txt  README.md  create_skeleton_device.cmake  new-device.in
share/new-device/skeleton/: CMakeLists.txt  Skeleton.cxx  Skeleton.h
share/new-device/skeleton/cmake/: setup.cmake  setupFairMQandBoost.cmake  setupROOT.cmake
share/otel-collector-compose/: CMakeLists.txt  README.md  docker-compose.yaml  docker-compose.yaml.in  opensearch_dashboards.yaml  otel-collector-config.yaml
